Add comments and start deployment

--- a/aws/base/github.yaml
+++ b/aws/base/github.yaml
@@ -34,4 +34,5 @@ Resources:
                 Action:
                   - "organizations:*"
                   - "cloudformation:*"
+                  - "ecr:*"
                 Resource: "*"
