--- a/docker/docker-compose.prod.yaml
+++ b/docker/docker-compose.prod.yaml
@@ -2,19 +2,19 @@ name: flowboard-production
 
 services:
   backend:
-    image: ${ECR_REGISTRY}/${ECR_REPOSITORY_BE}:latest
+    image: 482681396158.dkr.ecr.eu-central-1.amazonaws.com/flowboard-be:latest
     container_name: flowboard-backend
     restart: unless-stopped
     ports:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-      - SPRING_DATASOURCE_URL=${DATASOURCE_URL}
-      - SPRING_DATASOURCE_USERNAME=${DATASOURCE_USERNAME}
-      - SPRING_DATASOURCE_PASSWORD=${DATASOURCE_PASSWORD}
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/flowboard
+      - SPRING_DATASOURCE_USERNAME=flowboard
+      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - KEYCLOAK_AUTH_SERVER_URL=${KEYCLOAK_AUTH_SERVER_URL:-http://keycloak:8080}
       - KEYCLOAK_REALM=${KEYCLOAK_REALM}
-      - KEYCLOAK_ADMIN_USERNAME=${KEYCLOAK_ADMIN_USERNAME}
+      - KEYCLOAK_ADMIN_USERNAME=${KEYCLOAK_ADMIN_USERNAME:-admin}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
     depends_on:
       postgres:
@@ -31,7 +31,7 @@ services:
       start_period: 40s
 
   frontend:
-    image: ${ECR_REGISTRY}/${ECR_REPOSITORY_UI}:latest
+    image: 482681396158.dkr.ecr.eu-central-1.amazonaws.com/flowboard-ui:latest
     container_name: flowboard-frontend
     restart: unless-stopped
     ports:
@@ -81,9 +81,9 @@ services:
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
       - KC_DB=postgres
       - KC_DB_URL_HOST=postgres
-      - KC_DB_URL_DATABASE=${POSTGRES_DB:-flowboard}
-      - KC_DB_USERNAME=${POSTGRES_USER:-flowboard}
-      - KC_DB_PASSWORD=${POSTGRES_PASSWORD}
+      - KC_DB_URL_DATABASE=keycloak
+      - KC_DB_USERNAME=keycloak
+      - KC_DB_PASSWORD=${KEYCLOAK_DB_PASSWORD}
       - KC_HOSTNAME=${KEYCLOAK_HOSTNAME}
       - KC_HOSTNAME_STRICT=false
       - KC_HTTP_ENABLED=true
