--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,7 +73,7 @@ jobs:
         env:
           INGRESS_HOST: ${{ secrets.INGRESS_HOST }}
           KEYCLOAK_HOST: ${{ secrets.KEYCLOAK_HOST }}
-        run: npm run build
+        run: npm run build -- --prod
 
       - name: Build, tag, and push frontend image to Amazon ECR
         working-directory: ./ui
