Add env variables to allow value changing on different environments

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+server.port=${PORT:8080}
+
 spring.application.name=FlowBoard
-spring.datasource.url=jdbc:postgresql://localhost:5432/flowboard
-spring.datasource.username=flowboard
-spring.datasource.password=flowboardpw
+spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/flowboard}
+spring.datasource.username=${DATASOURCE_USERNAME:flowboard}
+spring.datasource.password=${DATASOURCE_PASSWORD:flowboardpw}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -13,7 +15,7 @@ jwt.expiration=86400000
 jwt.cookie.name=USER-TOKEN
 
 # Keycloak Configuration
-keycloak.auth-server-url=http://localhost:9090
+keycloak.auth-server-url=${KEYCLOAK_INTERNAL_AUTH_SERVER_URL:http://localhost:9090}
 keycloak.realm=flowboard
 keycloak.resource=flowboard
 keycloak.credentials.secret=your-client-secret
@@ -22,16 +24,16 @@ keycloak.admin.username=admin
 keycloak.admin.password=password
 
 # OAuth2 Resource Server Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/flowboard
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard
 jwt.auth.converter.resource-id=flowboard
 jwt.auth.converter.principle-attribute=preferred_username
 
 # OAuth2 Client Configuration
 spring.security.oauth2.client.registration.keycloak-admin-client.provider=keycloak-admin-realm
 spring.security.oauth2.client.registration.keycloak-admin-client.client-id=flowboard-api
-spring.security.oauth2.client.registration.keycloak-admin-client.client-secret=A1GPBRtUbvXWzsO1GFP77G3k1XWCAZFO
+spring.security.oauth2.client.registration.keycloak-admin-client.client-secret=${KEYCLOAK_ADMIN_CLIENT_SECRET:A1GPBRtUbvXWzsO1GFP77G3k1XWCAZFO}
 spring.security.oauth2.client.registration.keycloak-admin-client.authorization-grant-type=client_credentials
 
-spring.security.oauth2.client.provider.keycloak-admin-realm.issuer-uri=http://localhost:9090/realms/flowboard
+spring.security.oauth2.client.provider.keycloak-admin-realm.issuer-uri=${KEYCLOAK_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard
 
 springdoc.swagger-ui.oauth.client-id=flowboard
