Add cors settings and public keycloak path for swagger

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 # Keycloak Configuration
+keycloak.public-auth-server-url=${KEYCLOAK_AUTH_SERVER_URL:http://localhost:9090}
 keycloak.auth-server-url=${KEYCLOAK_INTERNAL_AUTH_SERVER_URL:http://localhost:9090}
 keycloak.realm=flowboard
 keycloak.admin.client-id=admin-cli
@@ -17,7 +18,7 @@ keycloak.admin.username=${KEYCLOAK_ADMIN_USERNAME:admin}
 keycloak.admin.password=${KEYCLOAK_ADMIN_PASSWORD:password}
 
 # OAuth2 Resource Server Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_INTERNAL_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard
 jwt.auth.converter.resource-id=flowboard
 jwt.auth.converter.principle-attribute=preferred_username
 
@@ -27,6 +28,7 @@ spring.security.oauth2.client.registration.keycloak-admin-client.client-id=flowb
 spring.security.oauth2.client.registration.keycloak-admin-client.client-secret=${KEYCLOAK_ADMIN_CLIENT_SECRET:A1GPBRtUbvXWzsO1GFP77G3k1XWCAZFO}
 spring.security.oauth2.client.registration.keycloak-admin-client.authorization-grant-type=client_credentials
 
-spring.security.oauth2.client.provider.keycloak-admin-realm.issuer-uri=${KEYCLOAK_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard
+spring.security.oauth2.client.provider.keycloak-admin-realm.issuer-uri=${KEYCLOAK_INTERNAL_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard
 
 springdoc.swagger-ui.oauth.client-id=flowboard
+security.allowedOrigins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,http://localhost:4444}
