Add public url for swagger

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=${PORT:8080}
+server.public-url=${PUBLIC_URL:http://localhost:${PORT:8080}}
 
 spring.application.name=FlowBoard
 spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/flowboard}
