Change issuer uri

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -19,7 +19,8 @@ keycloak.admin.username=${KEYCLOAK_ADMIN_USERNAME:admin}
 keycloak.admin.password=${KEYCLOAK_ADMIN_PASSWORD:password}
 
 # OAuth2 Resource Server Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_INTERNAL_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_INTERNAL_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_AUTH_SERVER_URL:http://localhost:9090}/realms/flowboard
 jwt.auth.converter.resource-id=flowboard
 jwt.auth.converter.principle-attribute=preferred_username
 
