Rework how fonts are loaded

--- a/aws/base/github.yaml
+++ b/aws/base/github.yaml
@@ -36,4 +36,5 @@ Resources:
                   - "cloudformation:*"
                   - "ecr:*"
                   - "ec2:*"
+                  - "ecs:*"
                 Resource: "*"
